added images to the initial templates

--- a/templates/hbs/index.hbs
+++ b/templates/hbs/index.hbs
@@ -1,2 +1,12 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+   <div class="container">
+    <div class="center-align">
+        <img src="/images/express.png" alt="express" ><br>
+        <h2>Welcome to {{title}}</h2>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <div class="center-align">
+        <p><b>To get started edit the </b>view/home.hbs <b>or </b>src/controllers/homeCtrl.js <b>and save and reload</b></p>
+    </div>
+</div>
