--- a/templates/partials/index.hbs
+++ b/templates/partials/index.hbs
@@ -1,5 +1,16 @@
 {{> layout}}
 
 {{#*inline "bodycontent"}}
-    Welcome using inline template
+    <div class="container">
+    <div class="center-align">
+        <img src="/images/express.png" alt="express" ><br>
+        <h2>Welcome to Express</h2>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <div class="center-align">
+        <p><b>To get started edit the </b>view/home.hbs <b>or </b>src/controllers/homeCtrl.js <b>and save and reload</b></p>
+    </div>
+</div>
 {{/inline}}
