--- a/templates/css/style.less
+++ b/templates/css/style.less
@@ -6,3 +6,11 @@ body {
 a {
   color: #00B7FF;
 }
+
+.container{
+  margin: 20px 50px 20px 50px;
+}
+.center-align{
+  text-align: center;
+  vertical-align: middle;
+}
