--- a/templates/css/style.sass
+++ b/templates/css/style.sass
@@ -4,3 +4,11 @@ body
 
 a
   color: #00B7FF
+  
+.container{
+  margin: 20px 50px 20px 50px;
+}
+.center-align{
+  text-align: center;
+  vertical-align: middle;
+}
