--- a/templates/dust/index.dust
+++ b/templates/dust/index.dust
@@ -2,10 +2,20 @@
 <html>
   <head>
     <title>{title}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
-    <h1>{title}</h1>
-    <p>Welcome to {title}</p>
+    <div class="container">
+      <div class="center-align">
+          <img src="/images/express.png" alt="express" ><br>
+          <h2>Welcome to {title}</h2>
+      </div>
+      <br>
+      <hr>
+      <br>
+      <div class="center-align">
+          <p><b>To get started edit the </b>view/home.hbs <b>or </b>src/controllers/homeCtrl.js <b>and save and reload</b></p>
+      </div>
+    </div>
   </body>
 </html>
