--- a/templates/js/package.json.hbs
+++ b/templates/js/package.json.hbs
@@ -22,7 +22,7 @@
         "cookie-session": "^1.3.1",
         {{/if}}
         "debug": "~2.6.9",
-        "express": "~4.15.5",
+        "express": "~4.16.0",
         "{{view.name}}": "{{view.version}}",
         {{#if helmet}}
         "helmet": "^3.8.2",
@@ -44,6 +44,10 @@
         {{#if passport}}
         "passport": "^0.4.0",
         "passport-local": "^1.0.0",
+        {{/if}}
+        {{#if passportjwt}}
+        "passport-http": "^0.3.0",
+        "passport-jwt": "^2.2.1",
         {{/if}}
         {{#if sequelize}}
         "sequelize": "^4.13.8",
